--- a/index.css
+++ b/index.css
@@ -1,10 +1,8 @@
 header {
   position: relative;
-  z-index: 1;
   height: 100vh;
   min-height: 850px;
   background: url(/stuff/background.jpg);
-  pointer-events: none;
 }
 header > div {
   display: flex;
@@ -19,12 +17,22 @@ header > div #popout {
   flex-direction: column;
   top: 50px;
   width: 400px;
-  z-index: -1;
   background-color: var(--background-tertiary);
   border-radius: var(--border-radius);
   overflow: hidden;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
-  animation: top 800ms;
+  -webkit-animation: top 800ms;
+          animation: top 800ms;
+}
+@-webkit-keyframes top {
+  0% {
+    margin-top: 200px;
+    opacity: 0;
+  }
+  100% {
+    margin-top: 0;
+    opacity: 1;
+  }
 }
 @keyframes top {
   0% {
@@ -34,6 +42,14 @@ header > div #popout {
   100% {
     margin-top: 0;
     opacity: 1;
+  }
+}
+@-webkit-keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.9);
   }
 }
 @keyframes scale {
@@ -48,7 +64,7 @@ header > div #popout .popout-header {
   width: 100%;
   height: 13%;
   min-height: 140px;
-  background: url(https://i.imgur.com/hGq0tR0.gif) center/cover no-repeat;
+  background: url("https://i.imgur.com/hGq0tR0.gif") center/cover no-repeat;
 }
 header > div #popout .popout-body {
   position: relative;
@@ -123,9 +139,19 @@ header > div #popout .popout-body .activity::after {
   height: 21px;
   background: url("./stuff/wave_playing.svg");
   background-size: 100% 21px;
-  animation: animate 6s linear infinite;
-  animation-delay: 0s;
+  -webkit-animation: animate 6s linear infinite;
+          animation: animate 6s linear infinite;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
   opacity: 1;
+}
+@-webkit-keyframes animate {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: 360px;
+  }
 }
 @keyframes animate {
   0% {
@@ -144,9 +170,19 @@ header > div #popout .popout-body .activity::before {
   left: 0;
   background: url("./stuff/wave.svg");
   background-size: 100% 21px;
-  animation: animate2 4s linear infinite;
-  animation-delay: 0s;
+  -webkit-animation: animate2 4s linear infinite;
+          animation: animate2 4s linear infinite;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
   opacity: 1;
+}
+@-webkit-keyframes animate2 {
+  0% {
+    background-position-x: 360px;
+  }
+  100% {
+    background-position-x: 0;
+  }
 }
 @keyframes animate2 {
   0% {
@@ -257,7 +293,8 @@ main .themes .theme h2 {
   right: 0;
   padding: 10px 0 10px 15px;
   background-color: #00000036;
-  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   border-radius: 0 0 var(--border-radius) var(--border-radius);
   transition: bottom 0.15s;
 }
@@ -324,6 +361,14 @@ body {
   padding: 0;
   margin: 0;
   font-size: 16px;
+}
+body ::-moz-placeholder {
+  font-family: "Inter", serif;
+  margin: 0;
+}
+body :-ms-input-placeholder {
+  font-family: "Inter", serif;
+  margin: 0;
 }
 body h1, body h2, body h3, body h4, body div, body ::placeholder {
   font-family: "Inter", serif;
